--- a/views/progress/AddForm.ejs
+++ b/views/progress/AddForm.ejs
@@ -31,11 +31,12 @@
 
       <div class="row">
         <div class="col mb-3">
-          <label class="form-label">Completed</label>
+          <label class="form-label">Completed Units</label>
           <input
             type="number"
             name="progress[completedUnits]"
             class="form-control"
+            min="0"
             required
           />
         </div>
@@ -46,6 +47,7 @@
             type="number"
             name="progress[totalUnits]"
             class="form-control"
+            min="1"
             required
           />
         </div>
